--- a/src/app/avaliation/componente-morfologica/st/st.component.html
+++ b/src/app/avaliation/componente-morfologica/st/st.component.html
@@ -18,7 +18,7 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <th i18n><span (click)="openDialog('Altura')">Altura</span> <small>(m)</small></th>
+                        <th i18n><span (click)="openDialog('Altura')">Altura</span> <small> (m)</small></th>
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].altura | number: '': locale}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].altura | number: '': locale}}</td>
                         <td *ngIf="addEval">
@@ -26,7 +26,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <th i18n><span (click)="openDialog('Peso')">Peso</span> <small>(Kg)</small></th>
+                        <th i18n><span (click)="openDialog('Peso')">Peso</span> <small> (Kg)</small></th>
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].peso | number: '': locale}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].peso | number: '': locale}}</td>
                         <td *ngIf="addEval">
@@ -37,7 +37,7 @@
                         <th i18n class="sub-line">Diâmetros</th>
                     </tr>
                     <tr>
-                        <th i18n><span (click)="openDialog('Joelho')">Joelho</span> <small>(cm)</small></th>
+                        <th i18n><span (click)="openDialog('Joelho')">Joelho</span> <small> (cm)</small></th>
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].joelho | number: '': locale}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].joelho | number: '': locale}}</td>
                         <td *ngIf="addEval">
@@ -45,7 +45,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <th i18n><span (click)="openDialog('Cotovelo')">Cotovelo</span> <small>(cm)</small></th>
+                        <th i18n><span (click)="openDialog('Cotovelo')">Cotovelo</span> <small> (cm)</small></th>
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].cotovelo | number: '': locale}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].cotovelo | number: '': locale}}</td>
                         <td *ngIf="addEval">
@@ -57,7 +57,7 @@
                         <th i18n class="sub-line">Dobras Cutâneas</th>
                     </tr>
                     <tr>
-                        <th i18n><span (click)="openDialog('Triciptal')">Triciptal</span> <small>(mm)</small></th>
+                        <th i18n><span (click)="openDialog('Triciptal')">Triciptal</span> <small> (mm)</small></th>
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].triciptal | number: '': locale}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].triciptal | number: '': locale}}</td>
                         <td *ngIf="addEval">
@@ -65,7 +65,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <th i18n><span (click)="openDialog('Subescapular')">Subescapular</span> <small>(mm)</small></th>
+                        <th i18n><span (click)="openDialog('Subescapular')">Subescapular</span> <small> (mm)</small></th>
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].subescapular | number: '': locale}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].subescapular | number: '': locale}}</td>
                         <td *ngIf="addEval">
@@ -73,7 +73,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <th i18n><span (click)="openDialog('Geminal')">Geminal</span> <small>(mm)</small></th>
+                        <th i18n><span (click)="openDialog('Geminal')">Geminal</span> <small> (mm)</small></th>
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].geminal | number: '': locale}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].geminal | number: '': locale}}</td>
                         <td *ngIf="addEval">
@@ -81,7 +81,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <th i18n><span (click)="openDialog('Suprailiaca')">Suprailiaca</span> <small>(mm)</small></th>
+                        <th i18n><span (click)="openDialog('Suprailíaca')">Suprailíaca</span> <small> (mm)</small></th>
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].suprailiaca | number: '': locale}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].suprailiaca | number: '': locale}}</td>
                         <td *ngIf="addEval">
@@ -90,10 +90,10 @@
                     </tr>
 
                     <tr>
-                        <th i18n class="sub-line">Perimetros</th>
+                        <th i18n class="sub-line">Perímetros</th>
                     </tr>
                     <tr>
-                        <th i18n><span (click)="openDialog('Braço Contraido')">Braço contraido</span> <small>(cm)</small></th>
+                        <th i18n><span (click)="openDialog('Braço Contraído')">Braço contraído</span> <small> (cm)</small></th>
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].bracoc | number: '': locale}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].bracoc | number: '': locale}}</td>
                         <td *ngIf="addEval">
@@ -101,7 +101,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <th i18n><span (click)="openDialog('Perna')">Perna</span> <small>(cm)</small></th>
+                        <th i18n><span (click)="openDialog('Perna')">Perna</span> <small> (cm)</small></th>
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].pernad | number: '': locale}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].pernad | number: '': locale}}</td>
                         <td *ngIf="addEval">
