--- a/src/app/avaliation/dobras/all-dobras/all-dobras.component.html
+++ b/src/app/avaliation/dobras/all-dobras/all-dobras.component.html
@@ -27,7 +27,7 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <th i18n><span (click)="openHelpDialog('Abdominal')">Abdominal</span></th>
+                        <th i18n><span (click)="openDialog('Abdominal')">Abdominal</span></th>
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].abdominal | number: '': locale}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].abdominal | number: '': locale}}</td>
                         <td *ngIf="addEval">
@@ -35,7 +35,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <th i18n><span (click)="openHelpDialog('Axilar')">Axilar</span></th>
+                        <th i18n><span (click)="openDialog('Axilar')">Axilar</span></th>
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].axilar | number: '': locale}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].axilar | number: '': locale}}</td>
                         <td *ngIf="addEval">
@@ -43,7 +43,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <th i18n><span (click)="openHelpDialog('Biciptal')">Biciptal</span></th>
+                        <th i18n><span (click)="openDialog('Biciptal')">Biciptal</span></th>
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].biciptal | number: '': locale}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].biciptal | number: '': locale}}</td>
                         <td *ngIf="addEval">
@@ -51,7 +51,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <th i18n><span (click)="openHelpDialog('Coxa')">Coxa</span></th>
+                        <th i18n><span (click)="openDialog('Coxa')">Coxa</span></th>
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].crural | number: '': locale}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].crural | number: '': locale}}</td>
                         <td *ngIf="addEval">
@@ -59,7 +59,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <th i18n><span (click)="openHelpDialog('Geminal')">Geminal</span></th>
+                        <th i18n><span (click)="openDialog('Geminal')">Geminal</span></th>
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].geminal | number: '': locale}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].geminal | number: '': locale}}</td>
                         <td *ngIf="addEval">
@@ -67,7 +67,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <th i18n><span (click)="openHelpDialog('Peitoral')">Peitoral</span></th>
+                        <th i18n><span (click)="openDialog('Peitoral')">Peitoral</span></th>
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].peitoral | number: '': locale}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].peitoral | number: '': locale}}</td>
                         <td *ngIf="addEval">
@@ -75,7 +75,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <th i18n><span (click)="openHelpDialog('Subescalar')">Subescalar</span></th>
+                        <th i18n><span (click)="openDialog('Subescalar')">Subescalar</span></th>
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].subescapular | number: '': locale}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].subescapular | number: '': locale}}</td>
                         <td *ngIf="addEval">
@@ -83,7 +83,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <th i18n><span (click)="openHelpDialog('Suprailiaca')">Suprailiaca</span></th>
+                        <th i18n><span (click)="openDialog('Suprailiaca')">Suprailiaca</span></th>
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].suprailiaca | number: '': locale}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].suprailiaca | number: '': locale}}</td>
                         <td *ngIf="addEval">
@@ -91,7 +91,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <th i18n><span (click)="openHelpDialog('Triciptal')">Triciptal</span></th>
+                        <th i18n><span (click)="openDialog('Triciptal')">Triciptal</span></th>
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].triciptal | number: '': locale}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].triciptal | number: '': locale}}</td>
                         <td *ngIf="addEval">
