--- a/src/app/avaliation/dobras/dw4/dw4.component.html
+++ b/src/app/avaliation/dobras/dw4/dw4.component.html
@@ -30,8 +30,8 @@
                 <tbody>
                     <tr>
                         <th i18n><span (click)="openHelpDialog('Triciptal')">Triciptal</span></th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].triciptal}}</td>
-                        <td *ngIf="pointer>=0">{{evaluation[pointer].triciptal}}</td>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].triciptal | number: '': locale}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].triciptal | number: '': locale}}</td>
                         <td *ngIf="addEval">
                             <input class="hidde-arrows" name="triciptal" #triciptal="ngModel" [(ngModel)]="newEvaluation.triciptal"
                                 type="number">
@@ -39,8 +39,8 @@
                     </tr>
                     <tr>
                         <th i18n><span (click)="openHelpDialog('Subescapular')">Subescapular</span></th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].subescapular}}</td>
-                        <td *ngIf="pointer>=0">{{evaluation[pointer].subescapular}}</td>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].subescapular | number: '': locale}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].subescapular | number: '': locale}}</td>
                         <td *ngIf="addEval">
                             <input class="hidde-arrows" name="subescapular" #subescapular="ngModel" [(ngModel)]="newEvaluation.subescapular"
                                 type="number">
@@ -48,17 +48,17 @@
                     </tr>
                     <tr>
                         <th i18n><span (click)="openHelpDialog('Biciptal')">Biciptal</span></th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].biciptal}}</td>
-                        <td *ngIf="pointer>=0">{{evaluation[pointer].biciptal}}</td>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].biciptal | number: '': locale}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].biciptal | number: '': locale}}</td>
                         <td *ngIf="addEval">
                             <input class="hidde-arrows" name="biciptal" #biciptal="ngModel" [(ngModel)]="newEvaluation.biciptal"
                                 type="number">
                         </td>
                     </tr>
                     <tr>
-                        <th i18n><span (click)="openHelpDialog('Suprailiaca')">Suprailiaca</span></th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].suprailiaca}}</td>
-                        <td *ngIf="pointer>=0">{{evaluation[pointer].suprailiaca}}</td>
+                        <th i18n><span (click)="openHelpDialog('Suprailíaca')">Suprailíaca</span></th>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].suprailiaca | number: '': locale}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].suprailiaca | number: '': locale}}</td>
                         <td *ngIf="addEval">
                             <input class="hidde-arrows" name="suprailiaca" #suprailiaca="ngModel" [(ngModel)]="newEvaluation.suprailiaca"
                                 type="number">
@@ -68,11 +68,11 @@
                         <th i18n>Média</th>
                         <td *ngIf="pointer>=1">
                             {{(+evaluation[pointer-1].biciptal + +evaluation[pointer-1].triciptal 
-                            + +evaluation[pointer-1].subescapular + +evaluation[pointer-1].suprailiaca) / 4 | number: '1.2-2'}}
+                            + +evaluation[pointer-1].subescapular + +evaluation[pointer-1].suprailiaca) / 4  | number: '': locale}}
                         </td>
                         <td *ngIf="pointer>=0">
                             {{(+evaluation[pointer].biciptal + +evaluation[pointer].triciptal 
-                            + +evaluation[pointer].subescapular + +evaluation[pointer].suprailiaca) / 4 | number: '1.2-2'}}
+                            + +evaluation[pointer].subescapular + +evaluation[pointer].suprailiaca) / 4  | number: '': locale}}
                         </td>
                         <td *ngIf="addEval">&nbsp;</td>
                     </tr>
@@ -80,11 +80,11 @@
                         <th i18n>Somatório</th>
                         <td *ngIf="pointer>=1">
                             {{+evaluation[pointer-1].biciptal + +evaluation[pointer-1].triciptal 
-                            + +evaluation[pointer-1].subescapular + +evaluation[pointer-1].suprailiaca| number: '1.2-2'}}
+                            + +evaluation[pointer-1].subescapular + +evaluation[pointer-1].suprailiaca | number: '': locale}}
                         </td>
                         <td *ngIf="pointer>=0">
                             {{+evaluation[pointer].biciptal + +evaluation[pointer].triciptal 
-                            + +evaluation[pointer].subescapular + +evaluation[pointer].suprailiaca | number: '1.2-2'}}
+                            + +evaluation[pointer].subescapular + +evaluation[pointer].suprailiaca  | number: '': locale}}
                         </td>
                         <td *ngIf="addEval">&nbsp;</td>
                     </tr>
