--- a/src/app/avaliation/dobras/faulkner4/faulkner4.component.html
+++ b/src/app/avaliation/dobras/faulkner4/faulkner4.component.html
@@ -30,8 +30,8 @@
                 <tbody>
                     <tr>
                         <th i18n><span (click)="openHelpDialog('Triciptal')">Triciptal</span></th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].triciptal | number: ': locale'}}</td>
-                        <td *ngIf="pointer>=0">{{evaluation[pointer].triciptal | number: ': locale'}}</td>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].triciptal | number: '': locale}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].triciptal | number: '': locale}}</td>
                         <td *ngIf="addEval">
                             <input class="hidde-arrows" name="triciptal" #triciptal="ngModel" [(ngModel)]="newEvaluation.triciptal"
                                 type="number">
@@ -39,33 +39,33 @@
                     </tr>
                     <tr>
                         <th i18n><span (click)="openHelpDialog('Subescapular')">Subescapular</span></th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].subescapular | number: ': locale'}}</td>
-                        <td *ngIf="pointer>=0">{{evaluation[pointer].subescapular | number: ': locale'}}</td>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].subescapular | number: '': locale}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].subescapular | number: '': locale}}</td>
                         <td *ngIf="addEval">
                             <input class="hidde-arrows" name="subescapular" #subescapular="ngModel" [(ngModel)]="newEvaluation.subescapular"
                                 type="number">
                         </td>
                     </tr>
                     <tr>
-                        <th i18n><span (click)="openHelpDialog('Suprailiaca')">Suprailiaca</span></th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].suprailiaca | number: ': locale'}}</td>
-                        <td *ngIf="pointer>=0">{{evaluation[pointer].suprailiaca | number: ': locale'}}</td>
+                        <th i18n><span (click)="openHelpDialog('Suprailíaca')">Suprailíaca</span></th>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].suprailiaca | number: '': locale}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].suprailiaca | number: '': locale}}</td>
                         <td *ngIf="addEval">
                             <input class="hidde-arrows" name="suprailiaca" #suprailiaca="ngModel" [(ngModel)]="newEvaluation.suprailiaca" type="number">
                         </td>
                     </tr>
                     <tr>
                         <th i18n><span (click)="openHelpDialog('Abdominal')">Abdominal</span></th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].abdominal | number: ': locale'}}</td>
-                        <td *ngIf="pointer>=0">{{evaluation[pointer].abdominal | number: ': locale'}}</td>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].abdominal | number: '': locale}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].abdominal | number: '': locale}}</td>
                         <td *ngIf="addEval">
-                            <input name="abdominal" #abdominal="ngModel" [(ngModel)]="newEvaluation.abdominal" type="number">
+                            <input class="hidde-arrows" name="abdominal" #abdominal="ngModel" [(ngModel)]="newEvaluation.abdominal" type="number">
                         </td>
                     </tr>
                     <tr *ngIf="sex == 'M'">
                         <th i18n><span (click)="openHelpDialog('Tipo aluno')">Tipo aluno</span></th>
-                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].tipoaluno | number: ': locale'}}</td>
-                        <td *ngIf="pointer>=0">{{evaluation[pointer].tipoaluno | number: ': locale'}}</td>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].tipoaluno | number: '': locale}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].tipoaluno | number: '': locale}}</td>
                         <td *ngIf="addEval">
                             <mat-form-field>
                                 <mat-label>Tipo Aluno</mat-label>
