--- a/src/app/avaliation/dobras/guedes/guedes.component.html
+++ b/src/app/avaliation/dobras/guedes/guedes.component.html
@@ -47,7 +47,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <th i18n><span (click)="openHelpDialog('Suprailiaca')">Suprailiaca</span></th>
+                        <th i18n><span (click)="openHelpDialog('Suprailíaca')">Suprailíaca</span></th>
                         <td *ngIf="pointer>=1">{{evaluation[pointer-1].suprailiaca | number: '': locale}}</td>
                         <td *ngIf="pointer>=0">{{evaluation[pointer].suprailiaca | number: '': locale}}</td>
                         <td *ngIf="addEval">
