--- a/src/styles.scss
+++ b/src/styles.scss
@@ -88,6 +88,12 @@ em{
   display: flex;
   justify-content: center;
 }
+
+.chart-legend .legend-label {
+  color: black !important;
+}
+
+
 .sub-line {
   color: blue;
   font-weight: 600;
@@ -140,6 +146,7 @@ td > input {
   margin-bottom: 5px;
 }
 
+/* altera o label do input */
 .mat-form-field-appearance-legacy .mat-form-field-label {
   color: rgba(0,0,0,.94) !important;
   font-size: medium !important; 
